exports/default/Event.ingress-app.17eab83b7048507a.yaml
apiVersion: v1
count: 132
eventTime: null
firstTimestamp: "2024-08-11T16:06:12Z"
involvedObject:
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  name: ingress-app
  namespace: default
  resourceVersion: "35629"
  uid: b3bf48aa-901d-439c-9a8a-e719c8234138
kind: Event
lastTimestamp: "2024-08-11T17:11:12Z"
message: Scheduled for sync
metadata:
  name: ingress-app.17eab83b7048507a
  namespace: default
reason: Sync
reportingComponent: nginx-ingress-controller
reportingInstance: ""
source:
  component: nginx-ingress-controller
type: Normal
